WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118781
Fix memory leaks in platform/image-encoders/JPEGImageEncoder.cpp
https://bugs.webkit.org/show_bug.cgi?id=118781
Summary
Fix memory leaks in platform/image-encoders/JPEGImageEncoder.cpp
liangjun zeng
Reported
2013-07-16 23:03:05 PDT
The function "jpeg_finish_compress" abort the processing of a JPEG compression operation. The compress object doesn't destroy, then it will be memory leak.
Attachments
Add the compression destroy at the end
(1.93 KB, patch)
2013-07-16 23:55 PDT
,
liangjun zeng
no flags
Details
Formatted Diff
Diff
update patch format.
(2.96 KB, patch)
2013-07-17 00:07 PDT
,
liangjun zeng
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
liangjun zeng
Comment 1
2013-07-16 23:55:31 PDT
Created
attachment 206860
[details]
Add the compression destroy at the end We can find the function "jpeg_finish_compress" call the function "jpeg_abort" at the end. And the comments of "jpeg_abort" is "Abort processing of a JPEG compression operation, but don't destroy the object itself". (We can find these in the "jcapimin.c" of jpeg) So the compression destroy need be called.
liangjun zeng
Comment 2
2013-07-17 00:07:22 PDT
Created
attachment 206862
[details]
update patch format.
liangjun zeng
Comment 3
2013-07-17 00:11:08 PDT
Comment on
attachment 206862
[details]
update patch format. Add the review flag.
Brent Fulgham
Comment 4
2013-10-30 10:28:06 PDT
Comment on
attachment 206862
[details]
update patch format. r=me
WebKit Commit Bot
Comment 5
2013-10-30 10:43:17 PDT
Comment on
attachment 206862
[details]
update patch format. Clearing flags on attachment: 206862 Committed
r158280
: <
http://trac.webkit.org/changeset/158280
>
WebKit Commit Bot
Comment 6
2013-10-30 10:43:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug